# stockidea

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 79d8a9a381f3_initial_schema.py  a1b2c3d4e5f6_add_strategies.py  a3b4c5d6e7f8_stop_loss_to_expression.py  a7b8c9d0e1f2_drop_rs_regime_add_stoploss_price.py  b2c3d4e5f6a7_drop_strategy_notes_final_rule.py  (+11 more)
data/: stocks.txt
docs/: PRODUCT_SPEC.md
frontend/: .dockerignore  Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
output/: analysis_20260119.json  simulation_rule_1_20260119_155813.json  simulation_rule_1_20260119_160332.json  simulation_rule_1_20260119_160608.json  simulation_rule_1_20260119_161100.json  simulation_rule_1_20260119_161208.json  simulation_rule_1_20260119_161555.json  simulation_rule_1_20260119_161609.json  simulation_rule_1_20260119_161650.json  simulation_rule_1_20260119_161702.json  simulation_rule_1_20260119_161849.json  simulation_rule_1_20260119_161906.json  simulation_rule_1_20260119_162008.json  simulation_rule_1_20260119_162125.json  simulation_rule_1_20260119_162147.json  simulation_rule_1_20260119_162205.json  simulation_rule_1_20260119_162315.json  simulation_rule_1_20260119_162445.json  simulation_rule_1_20260119_163020.json  simulation_rule_1_20260119_163132.json  simulation_rule_1_20260119_163143.json  simulation_rule_1_20260119_163200.json  simulation_rule_1_20260119_163457.json  simulation_rule_1_20260119_163600.json  simulation_rule_1_20260119_163646.json  simulation_rule_1_20260119_163935.json  simulation_rule_1_20260119_163953.json  simulation_rule_1_20260119_164041.json  simulation_rule_1_20260119_164115.json  simulation_rule_1_20260119_164128.json  simulation_rule_1_20260119_164157.json  simulation_rule_1_20260119_164221.json  simulation_rule_1_20260119_164326.json  simulation_rule_1_20260119_164344.json  simulation_rule_1_20260119_164423.json  simulation_rule_1_20260119_223135.json  simulation_rule_1_20260119_223530.json
(+106 files in other folders)
