[project]
name = "stockpick"
version = "0.1.0"
description = "Stock price analysis and reporting tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.14.0",
    "types-requests>=2.32.4.20260107",
]

[project.scripts]
stockpick = "stockpick.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockpick"]
